# theautoprint

./: .gitignore  AppxManifest.xml  README.md  build.bat  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build-msix.yml  build-rpi-arm64.yml  build.yml
debug_prints/: Simulated_A4_Laser_print.html  Simulated_Thermal_80mm_print.html
src/: index.html  main.js  styles.css  styles_fonts.css
src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  polling.rs  printer.rs  storage.rs  woo_client.rs
